k8s/polling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperviseur-polling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyperviseur-polling
  template:
    metadata:
      labels:
        app: hyperviseur-polling
    spec:
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: polling
          image: registry.hyxo.ovh/reden/hi2:backend
          command: ["npm", "run", "poll"]
        - name: netclient
          image: gravitl/netclient:latest
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
            privileged: true
