k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperviseur-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyperviseur-backend
  template:
    metadata:
      labels:
        app: hyperviseur-backend
    spec:
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: backend
          image: registry.hyxo.ovh/reden/hi2:backend
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: hyperviseur-backend
spec:
  selector:
    app: hyperviseur-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperviseur-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyperviseur-frontend
  template:
    metadata:
      labels:
        app: hyperviseur-frontend
    spec:
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: frontend
          image: registry.hyxo.ovh/reden/hi2:frontend
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hyperviseur-frontend
spec:
  selector:
    app: hyperviseur-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperviseur-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyperviseur-postgres
  template:
    metadata:
      labels:
        app: hyperviseur-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: hyperviseur-postgres
spec:
  selector:
    app: hyperviseur-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
